--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.17",
+    "axios": "^1.6.7",
     "native-base": "^3.4.28",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
